environments/qa/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: sri-app-service
 namespace: sri-qa # change per environment
spec:
 selector:
 app: sri-app
 ports:
 - port: 80
 targetPort: 8080
 type: ClusterIP
